--- a/style.css
+++ b/style.css
@@ -28,14 +28,14 @@ nav {
 }
 
 .dot {
-  font-size: 50px;
+  font-size: 3.125rem;
   color: #fff724;
 }
 .logo {
   cursor: pointer;
   /* text-decoration: none; */
   font-family: "Poppins", sans-serif;
-  font-size: 50px;
+  font-size: 3.125rem;
   cursor: pointer;
 }
 
@@ -53,61 +53,72 @@ nav {
 nav ul {
   flex: 1;
   text-align: right;
-  padding-right: 40px;
+  padding-right: 2.5rem;
 }
 
 nav ul li {
   display: inline-block;
   list-style: none;
-  margin: 10px 30px;
+  margin: 0.625rem 1.875rem;
 }
 
 nav ul li a {
   color: #fff;
   text-decoration: none;
   letter-spacing: 1px;
-  font-size: 17px;
+  font-size: 1.063rem;
+  cursor: pointer;
 }
 
 nav ul li a:hover {
   color: #fff724;
+  transition-delay: 0.2s, 100ms;
+  /* transition-delay: 0.5s ease-out; */
+  /* transition: blue 5s ease-out 100ms; */
 }
 
 .text-box {
-  margin-top: 10%;
-  font-size: 17px;
+  margin-top: 6.63rem;
+  font-size: 1.063rem;
   letter-spacing: 1px;
-  line-height: 26px;
+  line-height: 1.625rem;
 }
 
 .text-box h1 {
-  font-size: 55px;
-  line-height: 160px;
+  font-size: 3.5rem;
+  line-height: 10rem;
 }
 
 .text-box a {
-  margin-top: 30px;
+  margin-top: 1.875rem;
   display: inline-block;
   border-radius: 6px;
   border: 2px solid #fff724;
   color: #fff724;
-  padding: 10px 30px;
+  padding: 0.625rem 1.875rem;
   text-decoration: none;
 }
-
+.text-box a:hover {
+  background-color: yellow;
+  color: black;
+  font-weight: bold;
+}
 .text-box .btn {
   background: #fff724;
   color: #000;
-  margin-left: 30px;
+  margin-left: 1.875rem;
   font-weight: 600;
 }
-
+.text-box .btn:hover {
+  background-color: black;
+  color: yellow;
+}
 .user-img {
-  width: 350px;
-  position: absolute;
-  right: 3.1%;
-  bottom: 105px;
-  border-radius: 170px;
+  width: 21.875rem;
+  position: relative;
+  left: 74%;
+  bottom: 20.625rem;
+  border-radius: 10.625rem;
 }
 
 /* About section */
