--- a/style.css
+++ b/style.css
@@ -19,6 +19,18 @@ html {
   /* border: 2px solid pink; */
 }
 
+.checkbtn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check {
+  display: none;
+}
 nav {
   display: flex;
   width: 100%;
